--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -30,13 +30,37 @@ repositories {
     maven {
         url = 'https://maven.brott.dev/'
     }
+
+    maven {
+        url = 'https://maven.pedropathing.com'
+    }
+    maven {
+        url = 'https://mymaven.bylazar.com/releases'
+    }
+
+    maven {
+        url "https://repo.dairy.foundation/releases"
+    }
+
+    // Fpr Snapshot/Beta Versions of SolversLib
+    maven {
+        url "https://repo.dairy.foundation/snapshots"
+    }
 }
 
 dependencies {
     implementation project(':ftcrobotcontroller')
 
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.25"
-    implementation "com.acmerobotics.roadrunner:core:1.0.1"
-    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-    implementation "com.acmerobotics.dashboard:dashboard:0.5.0"
+    // SolversLib: Latest Stable Version
+    implementation "org.solverslib:core:0.3.3" // core
+    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
+
+    implementation "com.acmerobotics.dashboard:dashboard:0.4.17" // FTC Dashboard
+
+    // Pedro Pathing
+    implementation 'com.pedropathing:ftc:2.0.3'
+    implementation 'com.pedropathing:telemetry:1.0.0'
+
+    // Panels Dashboard
+    implementation "com.bylazar:fullpanels:1.0.5"
 }
