--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -55,12 +55,12 @@ dependencies {
     implementation "org.solverslib:core:0.3.3" // core
     implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
 
-    implementation "com.acmerobotics.dashboard:dashboard:0.5.0" // FTC Dashboard
+    //implementation "com.acmerobotics.dashboard:dashboard:0.5.0" // FTC Dashboard
 
     // Pedro Pathing
     implementation 'com.pedropathing:ftc:2.0.4'
     implementation 'com.pedropathing:telemetry:1.0.0'
 
     // Panels Dashboard
-    implementation "com.bylazar:fullpanels:1.0.6"
+    //implementation "com.bylazar:fullpanels:1.0.6"
 }
