--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation "org.solverslib:core:0.3.3" // core
     implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
 
-    //implementation "com.acmerobotics.dashboard:dashboard:0.5.0" // FTC Dashboard
+    implementation "com.acmerobotics.dashboard:dashboard:0.5.0" // FTC Dashboard
 
     // Pedro Pathing
     implementation 'com.pedropathing:ftc:2.0.4'
