--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -55,11 +55,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 
     // SolversLib: Latest Stable Version
-    implementation "org.solverslib:core:0.3.3" // core
-    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
+    implementation "org.solverslib:core:0.3.4-beta1" // core
+    implementation "org.solverslib:pedroPathing:0.3.4-beta1" // pedroPathing
 
     // Pedro Pathing
-    implementation 'com.pedropathing:ftc:2.0.4'
+    implementation 'com.pedropathing:ftc:2.0.5'
     implementation 'com.pedropathing:telemetry:1.0.0'
 
     // Panels Dashboard
