--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -50,6 +50,7 @@ repositories {
 
 dependencies {
     implementation project(':ftcrobotcontroller')
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:3.0.6'
 
     // JUnit for unit testing
     testImplementation 'junit:junit:4.13.2'
